Resolve "La police des titres n'est pas embarquée dans la présentation"

--- a/theme/theme.css
+++ b/theme/theme.css
@@ -4,6 +4,10 @@
 	--r-heading-font: 'bebas neue';
 	--r-heading-text-transform: uppercase;
 }
+@font-face {
+	font-family: 'bebas neue';
+	src: url(BebasNeue-Regular.ttf);
+}
 
 .reveal .slides {
 	margin-top: 0;
