--- a/src/theme-kzs/theme.css
+++ b/src/theme-kzs/theme.css
@@ -1,5 +1,4 @@
 /* ajustement du thème "simple" pour s'approcher du thème Kaizen */
-/*
 :root {
 	--r-main-font-size: 25px;
 	--r-heading-font: 'bebas neue';
@@ -9,7 +8,6 @@
 	font-family: 'bebas neue';
 	src: url(BebasNeue-Regular.ttf);
 }
- */
 
 .reveal .slides {
 	margin-top: 0;
@@ -39,7 +37,7 @@
 	margin-right: -10%;
 	padding-left: 10%;
 	padding-right: 10%;
-	/*background: linear-gradient(to right, #beffb5, #19efef 77%);*/
+	background: linear-gradient(to right, #beffb5, #19efef 77%);
 }
 
 .reveal h3 {
